--- a/package.json
+++ b/package.json
@@ -17,13 +17,17 @@
   },
   "homepage": "https://github.com/RaCoCL/graphql-server#readme",
   "dependencies": {
+    "axios": "^0.19.0",
     "graphql-yoga": "^1.18.3",
     "reflect-metadata": "^0.1.13",
     "type-graphql": "^0.17.5"
   },
   "devDependencies": {
+    "@types/jest": "^24.0.18",
     "@types/node": "^12.7.8",
     "@types/ws": "^6.0.3",
+    "jest": "^24.9.0",
+    "ts-jest": "^24.1.0",
     "typescript": "^3.6.3"
   }
 }
