adds scripts on deploy folder to deploy and start local graphql server adds/fixes the query string param to the axios post request.

--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "jest"
+    "compile": "tsc",
+    "test": "jest",
+    "start": ""
   },
   "repository": {
     "type": "git",
