--- a/ui-graphql-grid/package.json
+++ b/ui-graphql-grid/package.json
@@ -3,7 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@apollo/react-hoc": "^3.1.1",
+    "ag-grid-community": "^21.2.2",
+    "ag-grid-react": "^21.2.2",
+    "apollo-boost": "^0.4.4",
+    "graphql": "^14.5.8",
+    "graphql-tag": "^2.10.1",
     "react": "^16.10.1",
+    "react-apollo": "^3.1.1",
     "react-dom": "^16.10.1",
     "react-scripts": "3.1.2"
   },
